--- a/styles/style.css
+++ b/styles/style.css
@@ -11,12 +11,16 @@ body {
 main {
     display: flex;
     justify-content: center;
+    flex-direction: column;
+    align-items: center;
 }
 
 .container {
     background-color: #FFFFFF;
     width: 870px;
     padding: 30px;
+    margin-top: 21px;
+    border-radius: 5px;
 }
 
 hr {
@@ -87,4 +91,38 @@ hr {
     text-decoration: none;
     font-size: 16px;
     color: #562EFF;
+}
+/* courses styles */
+.courses{
+    display: grid;
+    grid-template-columns: repeat(3, 1fr);
+    grid-column-gap: 24px;
+
+
+}
+.course{
+    height: 270px;
+    width: 252px;
+    box-shadow:drop-shadow(0px 5.34229px 13.3557px rgba(0, 0, 0, 0.05)); ;
+}
+.course .course-banner img{
+    width: 224px;
+    height: 104px;
+}
+.course-info{
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+}
+.fa-star{
+    font-size: 12px;
+}
+.fa-star.filled{
+    color: #FFC014;
+   
+}
+.fa-star.empty{
+    color:#AEAEAE;
+    opacity: 0.25;
+
 }
