--- a/styles/style.css
+++ b/styles/style.css
@@ -8,6 +8,53 @@ body {
 
 }
 
+/* header styles */
+.bg {
+    background-color: #562EFF;
+    height: 94px;
+    width: 100%;
+
+}
+.left{
+    display: flex;
+    align-items: center;   
+    gap: 20px; 
+    padding-top: 25px;
+    
+    
+}
+.left img {
+    width: 40.42px;
+    height: 51px;
+    margin-left: 470px;
+}
+.left p{
+    color: #FFFFFF;
+    
+
+}
+.right{
+    display: flex;
+    gap: 36px;
+    justify-content: flex-end;
+    margin-right:460px ;
+    margin-top:  -55px;
+   
+    
+    
+
+
+}
+.right p{
+    color: #FFFFFF;
+    font-size: 16px;
+    font-weight: 400px!important ;
+     
+}
+
+
+/* main styles */
+
 main {
     display: flex;
     justify-content: center;
@@ -63,66 +110,116 @@ hr {
 }
 
 /* top blogs styles  */
-.blogs{
+.blogs {
     display: grid;
     grid-template-columns: repeat(2, 1fr);
     grid-row-gap: 26px;
 }
-.blog{
+
+.blog {
     display: flex;
 }
+
 .blog .thumnail img {
     width: 177px;
     height: 117px;
 }
-.blog-info{
+
+.blog-info {
     margin-left: 16px;
 }
-.blog-title{
+
+.blog-title {
     font-size: 20px;
-    
-}
-.blog-author{
-   color: #9F9F9F;
-   font-size: 16px;
 
 }
-.blog-author a{
+
+.blog-author {
+    color: #9F9F9F;
+    font-size: 16px;
+
+}
+
+.blog-author a {
     text-decoration: none;
     font-size: 16px;
     color: #562EFF;
 }
+
 /* courses styles */
-.courses{
+.courses {
     display: grid;
     grid-template-columns: repeat(3, 1fr);
     grid-column-gap: 24px;
 
 
 }
-.course{
+
+.course {
     height: 270px;
     width: 252px;
-    box-shadow:drop-shadow(0px 5.34229px 13.3557px rgba(0, 0, 0, 0.05)); ;
+    box-shadow: drop-shadow(0px 5.34229px 13.3557px rgba(0, 0, 0, 0.05));
+    ;
 }
-.course .course-banner img{
+
+.course .course-banner img {
     width: 224px;
     height: 104px;
 }
-.course-info{
+
+.course-info {
     display: flex;
     align-items: center;
     justify-content: space-between;
 }
-.fa-star{
+
+.fa-star {
     font-size: 12px;
 }
-.fa-star.filled{
+
+.fa-star.filled {
     color: #FFC014;
-   
+
 }
-.fa-star.empty{
-    color:#AEAEAE;
+
+.fa-star.empty {
+    color: #AEAEAE;
     opacity: 0.25;
 
+}
+
+/* media quaries */
+/* mobile device */
+@media only screen and (max-width: 688px) {
+    .container {
+        width: 100%;
+    }
+
+    .players,
+    .blogs,
+    .courses {
+
+        grid-template-columns: repeat(1, 1fr);
+    }
+
+    .player,
+    .blog {
+        flex-direction: column;
+
+    }
+}
+
+@media only screen and (min-width: 688px) and (max-width: 992px) {
+    .container {
+        width: 100%;
+    }
+
+    .players,
+    .courses {
+        grid-template-columns: repeat(2, 1fr);
+    }
+
+    .blogs {
+        grid-template-columns: repeat(1, 1fr);
+    }
 }
